add a unit test and fix tests.html view

--- a/tests.html
+++ b/tests.html
@@ -5,14 +5,17 @@
   <link rel="stylesheet" href="/vendor/assets/stylesheets/qunit.css">
 
   <script src="http://localhost:3000/assets/application.js"></script>
-  <script src="spec/javascripts/spec_helper.js"></script>
   <script src="/vendor/assets/javascripts/qunit.js"></script>
+  <script src="/vendor/assets/javascripts/ember-qunit.js"></script>
+  <script src="spec/javascripts/spec_helper.js"></script>
   <script src="/testem.js"></script>
 
+  <script src="spec/javascripts/controllers/topics_controller_spec.js"></script>
   <script src="spec/javascripts/integration/homepage_spec.js"></script>
 
 </head>
 <body>
+  <div id="qunit"></div>
   <div id="ember-testing"></div>
 </body>
 </html>
